tests/expected_invalid_parse_missing_generic_record_param_comma.diag.out
<input>:2:18: error: expected ',' between generic parameters
    record Pair<Left Right> {
                     ^^^^^
